2011-04-05  Anders Carlsson  <andersca@apple.com>

Reviewed by Darin Adler.

        Assertion failure when navigating quickly between file URLs
        https://bugs.webkit.org/show_bug.cgi?id=57884
        <rdar://problem/9080559>

        Remove bogus assertion. The pending provisional sandbox extension can be
        non-null if the current provisional load fails because we're about to load a new
        page that also has a sandbox extension.

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::SandboxExtensionTracker::didFailProvisionalLoad):


git-svn-id: svn://svn.chromium.org/blink/trunk@82982 bbb929c8-8fbe-4397-9dbb-9b2b20218538