third_party/WebKit/Source/WebKit2/WebProcess/WebPage/WebPage.cpp
@@ -1966,7 +1966,6 @@ void WebPage::SandboxExtensionTracker::didFailProvisionalLoad(WebFrame* frame)
     if (!frame->isMainFrame())
         return;
 
-    ASSERT(!m_pendingProvisionalSandboxExtension);
     if (!m_provisionalSandboxExtension)
         return;
 
